funcionando en windows main3